# tiny_renderer

./: .gitmodules  CMakeLists.txt  readme.md
renderer/: CMakeLists.txt
renderer/include/: enums.hpp  interface.hpp  manager.hpp  renderer.hpp  wen.hpp
renderer/include/base/: camera.hpp  window.hpp
renderer/include/resources/: index_buffer.hpp  shader.hpp  shader_program.hpp  texture_2d.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_layout.hpp
renderer/include/utils/: utils.hpp
renderer/src/: interface.cpp  manager.cpp  renderer.cpp
renderer/src/base/: camera.cpp  window.cpp
renderer/src/resources/: index_buffer.cpp  shader.cpp  shader_program.cpp  texture_2d.cpp  vertex_array.cpp  vertex_buffer.cpp
renderer/src/utils/: utils.cpp
sandbox/: CMakeLists.txt  main.cpp
sandbox/resources/shaders/: vert.glsl
